# moonlight-web-stream

./: Cargo.toml
moonlight-web/common/src/: api_bindings.rs  config.rs
moonlight-web/streamer/src/: main.rs
moonlight-web/streamer/src/transport/: mod.rs
moonlight-web/streamer/src/transport/webrtc/: mod.rs
moonlight-web/web-server/: Cargo.toml  package.json  tsconfig.json
moonlight-web/web-server/src/: cli.rs
moonlight-web/web-server/src/api/: auth.rs  mod.rs  stream.rs
moonlight-web/web-server/src/app/: host.rs  local.rs  mod.rs
moonlight-web/web-server/src/app/storage/: mod.rs
moonlight-web/web-server/src/app/storage/json/: mod.rs  serde_helpers.rs  versions.rs
moonlight-web/web-server/web/: api.ts  default_settings.ts  index.html  index.ts  stream.ts
moonlight-web/web-server/web/resources/: index.ts
moonlight-web/web-server/web/stream/: index.ts  input.ts  stats.ts
moonlight-web/web-server/web/stream/transport/: web_socket.ts  webrtc.ts
moonlight-web/web-server/web/styles/: moonlight.css  standard.css
