[package]
name = "web-server"
version.workspace = true
edition = "2024"
license = { workspace = true }

[dependencies]
moonlight-common = { workspace = true, features = ["high"] }
common = { path = "../common" }

tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }

clap = { workspace = true, features = ["derive", "env"] }

actix-web = { workspace = true, features = ["openssl"] }
openssl = { workspace = true }
actix-files = { workspace = true }
actix-ws = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-actix-web = { workspace = true }

anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

async-stream = { workspace = true }
futures = { workspace = true }
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
hex.workspace = true
sha2 = "0.10.9"

windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[lints]
workspace = true
